--- a/_old/humi_bookmark/html/options.html
+++ b/_old/humi_bookmark/html/options.html
@@ -1,14 +1,14 @@
 <script>
-  window.addEventListener('load', function load(event) {
-    chrome.storage.local.get('name', function (result) {
+  window.addEventListener("load", function load(event) {
+    chrome.storage.local.get("name", function (result) {
       if (result != undefined && result.name != undefined) {
-        document.getElementById('name').value = result.name
+        document.getElementById("name").value = result.name;
       }
-    })
-    document.getElementById('save').onclick = function () {
-      chrome.storage.local.set({ name: document.getElementById('name').value })
-    }
-  })
+    });
+    document.getElementById("save").onclick = function () {
+      chrome.storage.local.set({ name: document.getElementById("name").value });
+    };
+  });
 </script>
 <div id="main" style="padding: 30px">
   <p>Enter your name: <input id="name" /></p>
